force-app/main/default/objects/Routing__c/Routing__c.object-meta.xml
<CustomObject>
    <description>Routing steps for the production of a product or assembly</description>
    <label>Routing</label>
    <nameField>
        <label>Routing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>