force-app/main/default/objects/Routing__c/fields/Guideline_Description__c.field-meta.xml
<CustomField>
    <fullName>Guideline_Description__c</fullName>
    <description>Description of guidelines.  Max characters in ERP system is 2000</description>
    <inlineHelpText>ERP supports a maximum of 2000 characters.</inlineHelpText>
    <label>Guideline Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>