force-app/main/default/objects/Routing__c/fields/Guideline_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Guideline_Sequence__c</fullName>
    <description>The sequece this guideline falls in the routing step.  Sequence begins with 1 and can vary by the operation number.  A routing can send Guidelines optionally or default to data defined in ERP system for Standard Operation Id.</description>
    <label>Guideline Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>