force-app/main/default/objects/Routing__c/fields/Guideline_Text__c.field-meta.xml
<CustomField>
    <fullName>Guideline_Text__c</fullName>
    <description>Short text of guidelines.  Max characters in ERP system is 200</description>
    <inlineHelpText>ERP supports a maximum of 200 characters.</inlineHelpText>
    <label>Guideline Text</label>
    <length>200</length>
    <type>Text</type>
</CustomField>