force-app/main/default/objects/Routing__c/fields/Guideline_Type__c.field-meta.xml
<CustomField>
    <fullName>Guideline_Type__c</fullName>
    <description>Guideline type defined in ERP system.  Value sent should match the code defined in IFS.</description>
    <label>Guideline Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>*Gather Values From ERP*</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>