force-app/main/default/objects/Routing__c/fields/Outside_Operation_Item__c.field-meta.xml
<CustomField>
    <fullName>Outside_Operation_Item__c</fullName>
    <description>Outside Operation Item for Routing.  Required field in IFS for Routing object if outside operation needed.</description>
    <label>Outside Operation Item</label>
    <length>100</length>
    <type>Text</type>
</CustomField>