force-app/main/default/objects/Routing__c/fields/Routing_Operation_Number__c.field-meta.xml
<CustomField>
    <fullName>Routing_Operation_Number__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Operation number used internally to define the step in the production process.  Operations are read sequentially starting at 10 and differ by product.  Certain products have a max number of steps required for manufacturing.</description>
    <label>Routing Operation Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>