force-app/main/default/objects/Routing__c/fields/Sign_Off_Required__c.field-meta.xml
<CustomField>
    <fullName>Sign_Off_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to designate if Sign-Off is required after completion of routing step.  When set to true this will require sign-off in ERP system before continuing with next step of production.</description>
    <label>Sign-Off Required</label>
    <type>Checkbox</type>
</CustomField>