force-app/main/default/objects/Routing__c/fields/Standard_Operation_Id__c.field-meta.xml
<CustomField>
    <fullName>Standard_Operation_Id__c</fullName>
    <description>Standard Operation Id for Routings.  Required field in IFS for Routing object.</description>
    <label>Standard Operation Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>